name:                gitomail
version:             0.9.2.1
synopsis:            Gitomail - Automatic email generation for Git
homepage:            http://github.com/kernelim/gitomail
license:             Apache-2.0
license-file:        LICENSE
author:              Dan Aloni
maintainer:          dan@kernelim.com
category:            Devtool
build-type:          Custom
cabal-version:       >=1.10

executable gitomail
  hs-source-dirs:    src/
  main-is:           Main.hs
  ghc-options:       -Wall -O2 -rtsopts
  ghc-prof-options:  -Wall -O2 -rtsopts -auto-all -caf-all
  other-modules:     Gitomail.Maintainers.Parser
                   , Gitomail.Automailer
                   , Gitomail.CommitToMail
                   , Gitomail.Config
                   , Gitomail.Gitomail
                   , Gitomail.Maintainers
                   , Gitomail.Maintainers.Base
                   , Gitomail.Maintainers.Lexer
                   , Gitomail.Opts
                   , Gitomail.Version
                   , Gitomail.WhoMaintains
                   , Lib.DList
                   , Lib.Email
                   , Lib.Git
                   , Lib.Formatting
                   , Lib.InlineFormatting
                   , Lib.LiftedIO
                   , Lib.LiftedPrelude
                   , Lib.Maybe
                   , Lib.Map
                   , Lib.Monad
                   , Lib.Process
                   , Lib.Regex
                   , Lib.Sequence
                   , Lib.Text
                   , Paths_gitomail
  build-depends:       Glob                 >= 0.7    &&  < 0.8
                     , HaskellNet           >= 0.5
                     , HaskellNet-SSL       >= 0.3.2.1
                     , aeson                >= 0.8.0.2
                     , ansi-terminal        >= 0.6.2.3
                     , array                >= 0.5.1.0
                     , base                 >= 4.7    &&  < 5.0
                     , base16-bytestring    >= 0.1.1.6
                     , blaze-html           >= 0.8.1.1
                     , bytestring           >= 0.10.6.0
                     , conduit              >= 1.2.6.2
                     , containers           >= 0.5.6.2
                     , cryptohash           >= 0.11.6
                     , deepseq              >= 1.4.1.1
                     , deepseq-generics     >= 0.1.1.2
                     , directory            >= 1.2.2
                     , dlist                >= 0.7.1
                     , either               >= 4.4.1
                     , exceptions           >= 0.8.0.2
                     , fancydiff            >= 0.2.2
                     , filepath             >= 1.4.0.0
                     , gitlib               >= 3.1.1.1
                     , gitlib-libgit2       >= 3.1.1.1
                     , http-conduit         >= 2.1.8
                     , lens                 >= 4.12.3
                     , leveldb-haskell      >= 0.6.3
                     , lifted-base          >= 0.2.3.6
                     , mime-mail            >= 0.4.11
                     , monad-control        >= 1.0.0.5
                     , mtl                  >= 2.2.1
                     , optparse-applicative >= 0.11
                     , process-extras       >= 0.3.3.7
                     , random               >= 1.1
                     , regex-base           >= 0.93.2
                     , regex-tdfa           >= 1.2.1
                     , regex-tdfa-text      >= 1.0.0.3
                     , tagged               >= 0.8.1
                     , temporary            >= 1.2.0.4
                     , text                 >= 1.2.2.0
                     , time                 >= 1.5.0.1
                     , transformers         >= 0.4.2.0
                     , unix-time            >= 0.3.6
                     , unordered-containers >= 0.2.5.1
                     , vector               >= 0.11.0.0
                     , yaml                 >= 0.8.15.1
  build-tools:         happy, alex
  default-language:    Haskell2010

test-suite gitomail-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test, src
  main-is:             Spec.hs
  other-modules:       Lib.LiftedIO
                       Lib.LiftedPrelude
                       Lib.Process
                       Lib.Text
                       Paths_gitomail
  build-depends:       ansi-terminal        >= 0.6.2.3
                     , array                >= 0.5.1.0
                     , base                 >= 4.8.2.0
                     , bytestring           >= 0.10.6.0
                     , conduit              >= 1.2.6.2
                     , containers           >= 0.5.6.2
                     , deepseq              >= 1.4.1.1
                     , deepseq-generics     >= 0.1.1.2
                     , directory            >= 1.2.2.0
                     , exceptions           >= 0.8.2.1
                     , fancydiff            >= 0.2.2
                     , filepath             >= 1.4.0.0
                     , lens                 >= 4.13
                     , lifted-base          >= 0.2.3.6
                     , monad-control        >= 1.0.0.5
                     , mtl                  >= 2.2.1
                     , process-extras       >= 0.3.3.7
                     , regex-tdfa           >= 1.2.1
                     , regex-tdfa-text      >= 1.0.0.3
                     , temporary            >= 1.2.0.4
                     , text                 >= 1.2.2.0
                     , time                 >= 1.5.0.1
                     , transformers         >= 0.4.2.0
                     , unordered-containers >= 0.2.5.1
                     , vector               >= 0.11.0.0
                     , yaml                 >= 0.8.15.1
  ghc-options:         -O2 -Wall
  build-tools:         gitomail
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/kernelim/gitomail
